objects/Inquiry__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123Rule_Key_Value__c</fullName>
        <label>Rule Field Update Key Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow Action Performed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>InquirycCMPL123_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_On__c</fullName>
        <label>Workflow Action Performed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action__c</fullName>
        <label>Workflow Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Status__c</fullName>
        <label>Workflow Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <formula>IF (TEXT(Manufactured_by_Company__c) = "Yes" &amp;&amp; TEXT(Product_or_Packaging_Issue__c) = "No" &amp;&amp; TEXT(Patient_Affected__c) = "No", "NOT A COMPLAINT",
IF (TEXT( Manufactured_by_Company__c) = "No" &amp;&amp; TEXT( Product_or_Packaging_Issue__c) = "No" &amp;&amp; TEXT( Patient_Affected__c) = "No", "NOT A COMPLAINT",
IF (TEXT( Manufactured_by_Company__c) = "Yes" &amp;&amp; TEXT( Product_or_Packaging_Issue__c) = "Yes" &amp;&amp; TEXT( Patient_Affected__c) = "No", "COMPLAINT",
IF (TEXT( Manufactured_by_Company__c) = "Yes" &amp;&amp; TEXT( Product_or_Packaging_Issue__c) = "No" &amp;&amp; TEXT( Patient_Affected__c) = "Yes", "COMPLAINT",
IF (TEXT( Manufactured_by_Company__c) = "Yes" &amp;&amp; TEXT( Product_or_Packaging_Issue__c) = "Yes" &amp;&amp; TEXT( Patient_Affected__c) = "Yes", "COMPLAINT",
IF (TEXT( Manufactured_by_Company__c) = "No" &amp;&amp; TEXT( Product_or_Packaging_Issue__c) = "Yes" &amp;&amp; TEXT( Patient_Affected__c) = "Yes", "NOT A COMPLAINT",
IF (TEXT( Manufactured_by_Company__c) = "No" &amp;&amp; TEXT( Product_or_Packaging_Issue__c) = "Yes" &amp;&amp; TEXT( Patient_Affected__c) = "No", "NOT A COMPLAINT",
IF (TEXT( Manufactured_by_Company__c) = "No" &amp;&amp; TEXT( Product_or_Packaging_Issue__c) = "No" &amp;&amp; TEXT( Patient_Affected__c) = "Yes", "NOT A COMPLAINT",NULL))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification_verify__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Classification verify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>CMPL123__Contact__c</referenceTo>
        <relationshipName>Issue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Issue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Inquiry_Type_c__c</fullName>
        <label>Inquiry Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Request for Information</fullName>
                </value>
                <value>
                    <fullName>Product or Packaging</fullName>
                </value>
                <value>
                    <fullName>Patient Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manufactured_by_Company__c</fullName>
        <label>Manufactured by Company?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Patient_Affected__c</fullName>
        <label>Patient Affected?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>CMPL123__Product__c</referenceTo>
        <relationshipName>Issue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_or_Packaging_Issue__c</fullName>
        <label>Product or Packaging Issue?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reported_Date_and_Time__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Reported Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Support</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>email</fullName>
                </value>
                <value>
                    <fullName>Telephone</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Workflow_Status_update__c</fullName>
        <label>Workflow Status update</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Inquiry</label>
    <nameField>
        <displayFormat>INQ-{0000}</displayFormat>
        <label>Inquiry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inquiries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>